--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <model-viewer src="aspc2024.glb" shadow-intensity="1" alt="scene" auto-rotate ar magic-leap quick-look-browsers="safari chrome" ar-modes="webxr scene-viewer quick-look"
                   environment-image="neutral" camera-controls unstable-webxr>
 
-      <button slot="ar-button" style="background-color: white; border-radius: 4px; position: absolute; top: 16px; left: 16px; height: 35px; width: 300px; font-size: 24px">
+      <button slot="ar-button" style="background-color: #dcffc2; border-radius: 10px; position: absolute; top: 16px; left: 16px; height: 35px; width: 300px; font-size: 36px">
       👋 Go into AR
       </button>
     </model-viewer>
