--- a/index.html
+++ b/index.html
@@ -1,39 +1,58 @@
 <!doctype html>
-<html>
-    <head>
-      <meta charset="utf-8">
-    </head>
-    <body>
-    <div>
-    <p align = "center">
-    <font color="gray" face="Verdana, Geneva, sans-serif"> <h3 style="text-align:center">Almost Strong Petersen colouring (2024 version)</h3><br>
-    <br>
-    <p align = "left"> Press the button to enter<br></font>
-
-   <p align = "center">
-   <style>
-    model-viewer {
-    width: 1000px;
-    height: 500px;
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>Almost Strong Petersen colouring (2024 version)</title>
+  <style>
+    body {
+      font-family: Verdana, Geneva, sans-serif;
+      color: gray;
+      margin: 20px;
     }
-    </style>
-    <model-viewer src="aspc2024.glb" shadow-intensity="1" alt="scene" auto-rotate ar magic-leap quick-look-browsers="safari chrome" ar-modes="webxr scene-viewer quick-look"
-                  environment-image="neutral" camera-controls unstable-webxr>
+    h3 {
+      text-align: center;
+    }
+    .center {
+      text-align: center;
+    }
+    model-viewer {
+      width: 1000px;
+      height: 500px;
+    }
+    .ar-button {
+      background-color: #dcffc2;
+      border-radius: 10px;
+      position: absolute;
+      top: 16px;
+      left: 16px;
+      height: 35px;
+      width: 300px;
+      font-size: 24px;
+      cursor: pointer;
+    }
+  </style>
+  <!-- model-viewer library -->
+  <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.js"></script>
+  <script nomodule src="https://unpkg.com/@google/model-viewer/dist/model-viewer-legacy.js"></script>
+</head>
+<body>
 
-      <button slot="ar-button" style="background-color: #dcffc2; border-radius: 10px; position: absolute; top: 16px; left: 16px; height: 35px; width: 300px; font-size: 36px">
-      👋 Go into AR
-      </button>
+  <h3>Almost Strong Petersen colouring (2024 version)</h3>
+
+  <p>Press the button to enter:</p>
+
+  <div class="center">
+    <model-viewer src="aspc2024.glb"
+                  shadow-intensity="1"
+                  alt="3D scene"
+                  auto-rotate
+                  ar
+                  ar-modes="webxr scene-viewer quick-look"
+                  environment-image="neutral"
+                  camera-controls>
+      <button slot="ar-button" class="ar-button">👋 Go into AR</button>
     </model-viewer>
-    </div>
-    <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.js">
-    </script>
+  </div>
 
-    <!-- 💁 Include both scripts below to support all browsers!-->
-    <script type="module" src="https://unpkg.com/@google/model-viewer@v0.9.0/dist/model-viewer.js">
-    </script>
-    <script nomodule="" src="https://unpkg.com/@google/model-viewer@v0.9.0/dist/model-viewer-legacy.js">
-    </script>
-
-
-    </body>
+</body>
 </html>
