--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                   camera-controls>
     </model-viewer>
 
-    <p class="center">Press the button to enter:</p><br>
+    <p class="center">Press the button to enter:</p>
     <button slot="ar-button" class="ar-button">👋 Go into AR</button>
   </div>
 
